--- a/raw_material/templates/raw_material/acquisition_list.html
+++ b/raw_material/templates/raw_material/acquisition_list.html
@@ -32,10 +32,10 @@
                     
                     <div class="col-sm-7 border">
                             <form method="POST" >{% csrf_token %}
-                                {{form}}                                  
+                                                                 
                                 <h4> 
                                     <button type="submit" class="save btn btn-primary middle"> 
-                                        Küld                                  
+                                        {{form}}                                  
                                     </button>
                                 </h4>
                             </form>
@@ -45,8 +45,7 @@
                 </div>
             </div>
         </div>
-{{acq}}
-<p>{{ wares }}</p>
+<p>{{ acq }}</p>
 
 {% for ware_type  in ware_type_list %}
     <h3>{{ ware_type.ware_types }}</h3>
@@ -54,12 +53,13 @@
         <table class="table table-md-12 table-hover">
             <thead class="table-light align-text-top">
                 <tr>  
-                    <th class="col-sm-2">Áru <br> Helyzete </th>
-                    <th class="col-sm-2">Beszerző<br>  Bevételező</th>
-                    <th class="col-sm-2">Beszerzési Dátum <br> Raktár dátum</th>
-                    <th class="col-sm-2">Kiszerelés [g] <br> Raktáron [g]</th>
-                    <th class="col-sm-1">Csomag ára </th>
-                    <th class="col-sm-2">  Szerkeszt Bevételez <br> Kibont Elfogyott</th>
+                    <th class="col-sm-2">Áru</th>
+                    <th class="col-sm-1">Helyzete</th>
+                    <th class="col-sm-2">Ügyintéző<br> </th>
+                    <th class="col-sm-2">Iktatási Dátum <br> </th>
+                    <th class="col-sm-2">Kiszerelés<br>Raktáron [g]</th>
+                    <th class="col-sm-1">Ára [Ft] </th>
+                    <th class="col-sm-2">Szerkeszt</th>
                     
                 </tr>
                 <i class="glyphicon glyphicon-plus"></i>
@@ -70,20 +70,50 @@
                 {% if ware.ware_type.ware_type == ware_type %}
 
                     <th class="col-sm-2">
-                        {{ ware.ware_type.ware_brand }} {{ ware.ware_type.ware_brand_name }} {{ ware.id }}  
-                        <br> {{ware.store_status.name}}
-                        </th>
-                    <td class="col-sm-2">{{ ware.acquisiton_user }} <br>  {{ ware.store_user }}</td>
-                    <td class="col-sm-2">{{ ware.acquisition_date }} <br> {{ ware.store_date }}</td>
-                    <td class="col-sm-1">{{ ware.ware_type.ware_weight }} <br> {{ ware.stock }}</td>
+                        {{ ware.id }} {{ ware.ware_type.ware_brand }} {{ ware.ware_type.ware_brand_name }}   
+                    </th>
+                    <td class="col-sm-1">
+                        {% if ware.store_status == 1 %} BESZEREZVE
+                        {% elif ware.store_status == 2 %} RAKTÁRON
+                        {% elif ware.store_status == 3 %} KIBONTVA
+                        {% elif ware.store_status == 4 %} ELFOGYOTT
+                        {% endif %}  
+                    </td>
+
+                    <td class="col-sm-2">
+                        {% if ware.store_status == 1 %} {{ ware.acquisiton_user }}
+                        {% elif ware.store_status == 2 %} {{ ware.store_user }}
+                        {% elif ware.store_status == 3 %} {{ ware.open_user }}
+                        {% elif ware.store_status == 4 %} {{ ware.empty_user }}
+                        {% endif %} 
+                    </td>
+
+                    <td class="col-sm-2">
+                        {% if ware.store_status == 1 %} 
+                            {{ ware.acquisition_date|date:"Y.m.d" }}
+                            {{ ware.acquisition_date|time:"H:i" }}
+                        {% elif ware.store_status == 2 %}
+                            {{ ware.store_date|date:"Y.m.d" }}
+                            {{ ware.store_date|time:"H:i" }}
+                        {% elif ware.store_status == 3 %} 
+                            {{ ware.open_date|date:"Y.m.d"  }}
+                            {{ ware.open_date|time:"H:i" }}
+                        {% elif ware.store_status == 4 %} 
+                            {{ ware.empty_date|date:"Y.m.d"  }}
+                            {{ ware.empty_date|time:"H:i" }}
+                        {% endif %} 
+                    </td>
+
+                    <td class="col-sm-2">{{ ware.ware_type.ware_weight }}  /  {{ ware.stock }}
+                    </td>
                     <td class="col-sm-1">{{ ware.acquisition_price }}</td>
                     
                     <td class="col-sm-2">
                     {% if user.is_staff %}
+                        {% if ware.store_status == 1 %}
                         <a class="btn btn-primary btn-sm" 
                             href="{% url 'raw_material:acquisition_edit' pkey=ware.pk %}" >
                             <span class="fa fa-pencil"></span></a>
-                        {% if ware.store_status == 1 %}
                             <a class="btn btn-primary btn-sm" 
                                 href="{% url 'raw_material:acquisition_storing' pkey=ware.pk %}">
                                 <span class="fa fa-cube"></span></a>
@@ -100,11 +130,13 @@
                                 onclick="return confirm('A csomag kiürült?')">
                                 <span class="fa fa-share-square-o"></span></a>
                         {% endif %}
+                        {% if ware.store_status == 1 or ware.store_status == 2 %}
                         <a class="btn btn-danger btn-sm" 
                             href="{% url 'raw_material:acquisition_remove' pkey=ware.pk %}" 
                             onclick="return confirm('Biztosan törölni akarja?')">
                             <span class="fa fa-trash-o"></span></a>
                         {% endif %}
+                    {% endif %}
                     </td>
                 {% endif %}                
                 </tr>
