--- a/raw_material/templates/raw_material/acquisition_list.html
+++ b/raw_material/templates/raw_material/acquisition_list.html
@@ -25,12 +25,12 @@
     <div class="container"></div>
         <div class="row">                                  
             <div class="col-sm-10">
-                <div class="row border">
+                <div class="row ">
                     <div class="col-sm-3">
                         <h2 style="text-align:Left">Készletek</h2>
                     </div>
                     
-                    <div class="col-sm-7 border">
+                    <div class="col-sm-7 ">
                             <form method="POST" >{% csrf_token %}
                                                                  
                                 <h4> 
