--- a/raw_material/templates/raw_material/acquisition_new.html
+++ b/raw_material/templates/raw_material/acquisition_new.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}    
-    ware list    
+    New acquisition    
 {% endblock %}
 {% block style %}    
     <style>
