--- a/shop/templates/shop/coffee_home.html
+++ b/shop/templates/shop/coffee_home.html
@@ -22,16 +22,26 @@
 {% block content %}
 
 <div class="container pt-2 middle border">
-    <h2> Kávé adatlaplap </h2>
-    <h4>{{wares}}</h4>
-
-    
+    <div class="col-sm-6 right border">
+        <h2> Kávé adatlaplap </h2>
+        <h4>{{wares}}</h4>
+    </div>    
 </div>
-<div class="container sm-8 pt-2 border">
-    <div class="col-sm-2 right border">
-        <a  href="{% url 'shop:coffee_make' %}">                
-            <img src ="{% static '/image/coffee_machine_1.jfif' %}" class="rounded" style="height:150px"; alt="choice">                 
-        </a>
+
+<div class="container sm-8 pt-2 ">
+    <div class="row">
+        <div class="col-sm-3 right border">
+            <a  {% if user.is_staff %} href="{% url 'shop:coffee_make' %}" {% endif %}>                
+                <img src ="{% static '/image/coffee_machine_1.jfif' %}" class="rounded" 
+                style="width:200px;height:200px; border:5px solid; padding: 5px;background-color:white;"; alt="choice">                 
+            </a>
+        </div>
+        <div class="col-sm-3 right border">
+            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_make' %}" {% endif %}>                
+                <img src ="{% static '/image/koffe.jpeg' %}" class="rounded" 
+                style="width:200px;height:200px; border:5px solid; "; alt="choice">                 
+            </a>
+        </div>
     </div>
 </div>
 
