--- a/templates/home.html
+++ b/templates/home.html
@@ -16,5 +16,6 @@
     </style>
 {% endblock %}
 {% block content %}
-
+<h1> THIS SITE UNDER CONSTRUCTION</h1>
+<h4> THIS SITE IS A 100% DJANGO TUTORIAL (and GIT)</h4>
 {% endblock %}
