--- a/templates/home.html
+++ b/templates/home.html
@@ -18,4 +18,7 @@
 {% block content %}
 <h1> THIS SITE UNDER CONSTRUCTION</h1>
 <h4> THIS SITE IS A 100% DJANGO TUTORIAL (and GIT)</h4>
+<p> staff login:    the.boss@staff.com</p>
+<p>password:    Enter1</p>
+
 {% endblock %}
