coffee ordering templates, view, url

--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Coffee Make
+    Coffee Order
 {% endblock %}
 
 {% block style %}    
@@ -31,7 +31,8 @@
             </a>
         </div>
         <div class="col-sm-6 right border">
-            <h1> Kávé főzés {{dt}} </h1>
+            <h1> Kávé rendelés {{dt}} </h1>
+            <h3>{{coffe}}</h3>
             <h4> Kibontott kávék</h4>
         </div>    
     </div>
