--- a/shop/templates/shop/coffee_home.html
+++ b/shop/templates/shop/coffee_home.html
@@ -37,7 +37,7 @@
             </a>
         </div>
         <div class="col-sm-3 right border">
-            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_make' %}" {% endif %}>                
+            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_order' %}" {% endif %}>                
                 <img src ="{% static '/image/koffe.jpeg' %}" class="rounded" 
                 style="width:200px;height:200px; border:5px solid; "; alt="choice">                 
             </a>
