--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -26,13 +26,14 @@
     <div class="row-sm-2">
         <div class="col-sm-2 right border">
             <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_home' %}" {% endif %}>                
-                <img src ="{% static '/image/coffee_machine_1.jfif' %}" class="rounded" 
+                <img src ="{% static '/image/koffe.jpeg' %}" class="rounded" 
                 style="width:100px;height:100px; border:5px solid; "; alt="choice">                 
             </a>
         </div>
         <div class="col-sm-6 right border">
             <h1> Kávé rendelés {{dt}} </h1>
             <h3>{{coffe}}</h3>
+            <h3>{{end}}</h3>
             <h4> Kibontott kávék</h4>
         </div>    
     </div>
