id of order to list and min max

--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -35,6 +35,8 @@
             <h3>   {{dt}} </h3>
             <h3>{{coffes}}</h3>
             <h3>{{end}}</h3>
+            <h3>{{adat}}</h3>
+            <h3>{{ordered}}</h3>
             <h4> Kibontott kávék</h4>
         </div>    
     </div>
