--- a/raw_material/templates/raw_material/ware_list.html
+++ b/raw_material/templates/raw_material/ware_list.html
@@ -59,7 +59,7 @@
                     <td>
                     {% if user.is_staff %}
                         <a class="btn btn-primary btn-sm" href="{% url 'raw_material:ware_edit' pk=ware_type_list.pk pkey=ware.pk %}"><span class="fa fa-pencil"></span></a>
-                        <a class="btn btn-primary btn-sm" href="{% url 'raw_material:ware_remove' pk=ware_type_list.pk pkey=ware.pk %}"><span class="fa fa-trash-o"></span></a>
+                        <a class="btn btn-danger btn-sm" href="{% url 'raw_material:ware_remove' pk=ware_type_list.pk pkey=ware.pk %}"><span class="fa fa-trash-o"></span></a>
                         {% endif %}
                         {% if user.is_authenticated %}
                         <a class="btn btn-primary btn-sm" href="{% url 'raw_material:acquisition_new' pk=ware_type_list.pk pkey=ware.pk %}"><span class="fa fa-shopping-basket"></span></a>
