--- a/shop/templates/shop/coffee_make.html
+++ b/shop/templates/shop/coffee_make.html
@@ -66,7 +66,9 @@
                     <td>{{ware.id}}</td>
                     <td>
                         {% if user.is_staff %}
-                        <a class="btn btn-primary btn-sm" href="{% url 'shop:coffee_make_form' pkey=ware.pk %}"><span class="fa fa-shopping-basket"></span></a>
+                        <a class="btn btn-primary btn-sm" 
+                        href="{% url 'shop:coffee_make_form' pkey=ware.pk %}">
+                        <span class="fa fa-shopping-basket"></span></a>
                         {% endif %}
                     </td>       
                 </tr>
