ordering set max in forms

--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -50,7 +50,7 @@
                         {{coffee.c_make_ware.ware_type.ware_brand}}, 
                         {{coffee.c_make_ware.ware_type.ware_brand_name}}</th>                   
                     <th class="col-sm-1">{{coffee.c_make_date}}</th>
-                    <th class="col-sm-1">  Kávé adag </th>                    
+                    <th class="col-sm-1">  Kávé adag még:<br> {{coffee.c_make_dose}}</th>                    
                     <th class="col-sm-1">  Cukor adag </th>                    
                     <th class="col-sm-1">  Tej adag </th>                    
                     <th class="col-sm-1">  Ízesítő adag </th>                    
