--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -74,7 +74,7 @@
                     <td>{{order.milk_dose}}</td>
                     <td>{{order.flavour_dose}}</td>
                     <td>
-                        {% if user.is_staff %}
+                        {% if user.is_staff and order.coffee_dose > 1.5%}
                         <a class="btn btn-danger btn-sm" 
                         href="{% url 'shop:coffee_order_remove' pk=order.pk %}"
                         onclick="return confirm('Biztosan törölni akarja?')">
